--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
+<head>
+<title>HH.mp4 | PRIVATE VIDEO</title>
+</head>
+<body>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1942843087265692"
+     crossorigin="anonymous"></script>
+<!-- aramas -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1942843087265692"
+     data-ad-slot="4489871393"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>HH.MP4 ...</p>
 <video>
 <source src="HH.mp4">
 </video>
+</body>
